# sportsipy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  lint_all.ps1  lint_all.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  update_requirements.bat  update_requirements.sh
.github/: copilot-instructions.md
.github/workflows/: exhaustive.yml  pushtests.yml
docs/: api.md  conf.py  examples.md  examples.rst  fb.md  index.md  index.rst  installation.md  installation.rst  mlb.md  mlb.rst  nba.md  nba.rst  ncaab.md  ncaab.rst  ncaaf.md  ncaaf.rst  nfl.md  nfl.rst  nhl.md  nhl.rst  testing.md  testing.rst
scripts/: capture_fixtures.py  check_docs_links.py  fixture_staleness_report.py  live_site_audit.py
sportsipy/: __init__.py  chrome_cookies.py  constants.py  decorators.py  utils.py
sportsipy/fb/: __init__.py  constants.py  fb_utils.py  league_ids.py  roster.py  schedule.py  squad_ids.py  team.py
sportsipy/mlb/: __init__.py  boxscore.py  constants.py  mlb_utils.py  player.py  roster.py  schedule.py  teams.py
sportsipy/nba/: __init__.py  boxscore.py  constants.py  nba_utils.py  player.py  roster.py  schedule.py  teams.py
sportsipy/ncaab/: __init__.py  boxscore.py  conferences.py  constants.py  ncaab_utils.py  player.py  rankings.py  roster.py  schedule.py  teams.py
sportsipy/ncaaf/: __init__.py  boxscore.py  conferences.py  constants.py  ncaaf_utils.py  player.py  rankings.py  roster.py  schedule.py  teams.py
sportsipy/nfl/: __init__.py  boxscore.py  constants.py  nfl_utils.py  player.py  roster.py  schedule.py  teams.py
sportsipy/nhl/: __init__.py  boxscore.py  constants.py  nhl_utils.py  player.py  roster.py  schedule.py  teams.py
tests/: conftest.py
tests/exhaustive/: __init__.py  fb_tests.py  mlb_tests.py  nba_tests.py  ncaab_tests.py  ncaaf_tests.py  nfl_boxscore_tests.py  nfl_constants_tests.py  nfl_tests.py  nhl_tests.py
tests/fixtures/: url_map.json
tests/integration/: __init__.py  conftest.py  test_utils.py  url_map.json
tests/integration/boxscore/: __init__.py  test_mlb_boxscore.py  test_nba_boxscore.py  test_ncaab_boxscore.py  test_ncaaf_boxscore.py  test_nfl_boxscore.py  test_nhl_boxscore.py
tests/integration/conferences/: __init__.py  test_ncaab_conferences.py  test_ncaaf_conferences.py
tests/integration/rankings/: __init__.py  test_ncaab_rankings.py  test_ncaaf_rankings.py
tests/integration/roster/: __init__.py  test_fb_roster.py  test_mlb_roster.py  test_nba_roster.py  test_ncaab_roster.py  test_ncaaf_roster.py  test_nfl_roster.py  test_nhl_roster.py
tests/integration/schedule/: __init__.py  test_fb_schedule.py  test_mlb_schedule.py  test_nba_schedule.py  test_ncaab_schedule.py  test_ncaaf_schedule.py  test_nfl_schedule.py  test_nhl_schedule.py
tests/integration/team/: __init__.py  test_fb_team.py
tests/integration/teams/: __init__.py  test_mlb_integration.py  test_nba_integration.py  test_ncaab_integration.py  test_ncaaf_integration.py  test_nfl_integration.py  test_nhl_integration.py
tests/unit/: __init__.py  conftest.py  test_decorators.py  test_fb_roster.py  test_fb_schedule.py  test_fb_team.py  test_fb_utils.py  test_mlb_boxscore.py  test_mlb_roster.py  test_mlb_schedule.py  test_mlb_teams.py  test_nba_boxscore.py  test_nba_roster.py  test_nba_schedule.py  test_nba_utils.py  test_ncaab_boxscore.py  test_ncaab_roster.py  test_ncaab_schedule.py  test_ncaab_teams.py  test_ncaaf_boxscore.py  test_ncaaf_roster.py  test_ncaaf_schedule.py  test_ncaaf_teams.py  test_nfl_boxscore.py  test_nfl_roster.py  test_nfl_schedule.py  test_nhl_boxscore.py  test_nhl_roster.py  test_nhl_schedule.py  test_utils.py
tests/unit/boxscore/: test_mlb_boxscore.py  test_nba_boxscore.py  test_ncaab_boxscore.py  test_ncaaf_boxscore.py  test_nfl_boxscore.py  test_nhl_boxscore.py
tests/unit/roster/: test_fb_roster.py  test_mlb_roster.py  test_nba_roster.py  test_ncaab_roster.py  test_ncaaf_roster.py  test_nfl_roster.py  test_nhl_roster.py
tests/unit/schedule/: test_fb_schedule.py  test_mlb_schedule.py  test_nba_schedule.py  test_ncaab_schedule.py  test_ncaaf_schedule.py  test_nfl_schedule.py  test_nhl_schedule.py
tests/unit/team/: test_fb_team.py
tests/unit/teams/: test_mlb_teams.py  test_nba_teams.py  (+4 more)
(+108 files in other folders)
